--- a/Ads.html
+++ b/Ads.html
@@ -59,7 +59,7 @@
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-client="YOUR-AD-CLIENT-ID"
-           data-ad-slot="YOUR-AD-SLOT-ID"
+           data-ad-slot="ca-app-pub-2666625205982863/5057071936"
            data-ad-format="rectangle"></ins>
       <script>
            (adsbygoogle = window.adsbygoogle || []).push({});
