--- a/Ads.html
+++ b/Ads.html
@@ -3,145 +3,124 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Google Banner Ads</title>
+  <title>AdMob Banner Ads</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
       margin: 0;
-      padding: 0;
+      padding: 20px;
+      background-color: #f4f4f4;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       flex-direction: column;
+      align-items: center;
     }
 
-    .ads-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      gap: 20px;
-      max-width: 1200px;
+    .ad-container {
+      margin: 15px 0;
+      text-align: center;
+      width: 100%;
     }
 
     .ad {
-      width: 300px;
-      height: 250px;
-      background-color: #ffffff;
+      display: inline-block;
+      width: 320px; /* Standard banner size */
+      height: 50px; /* Standard banner size */
       border: 1px solid #ccc;
+      background-color: #f9f9f9;
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
     }
 
-    /* Styling for better spacing */
-    @media (max-width: 768px) {
-      .ads-container {
-        justify-content: center;
-      }
-
-      .ad {
-        width: 100%;
-        max-width: 300px;
-      }
+    h1 {
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
-  <div class="ads-container">
-    <!-- Replace these with your actual Google AdSense banner codes -->
-    <div class="ad">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="YOUR-AD-CLIENT-ID"
-           data-ad-slot="ca-app-pub-2666625205982863/5057071936"
-           data-ad-format="rectangle"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-    <div class="ad">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="YOUR-AD-CLIENT-ID"
-           data-ad-slot="YOUR-AD-SLOT-ID"
-           data-ad-format="rectangle"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-    <div class="ad">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="YOUR-AD-CLIENT-ID"
-           data-ad-slot="YOUR-AD-SLOT-ID"
-           data-ad-format="rectangle"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-    <div class="ad">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="YOUR-AD-CLIENT-ID"
-           data-ad-slot="YOUR-AD-SLOT-ID"
-           data-ad-format="rectangle"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-    <div class="ad">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="YOUR-AD-CLIENT-ID"
-           data-ad-slot="YOUR-AD-SLOT-ID"
-           data-ad-format="rectangle"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-    <div class="ad">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="YOUR-AD-CLIENT-ID"
-           data-ad-slot="YOUR-AD-SLOT-ID"
-           data-ad-format="rectangle"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-    <div class="ad">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="YOUR-AD-CLIENT-ID"
-           data-ad-slot="YOUR-AD-SLOT-ID"
-           data-ad-format="rectangle"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-    <div class="ad">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="YOUR-AD-CLIENT-ID"
-           data-ad-slot="YOUR-AD-SLOT-ID"
-           data-ad-format="rectangle"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
+  <h1>AdMob Banner Ads Example</h1>
+
+  <!-- AdMob Ads Start -->
+  <div class="ad-container">
+    <ins class="adsbygoogle ad"
+         style="display:inline-block;width:320px;height:50px"
+         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+         data-ad-slot="XXXXXXXXXX"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </div>
+
+  <div class="ad-container">
+    <ins class="adsbygoogle ad"
+         style="display:inline-block;width:320px;height:50px"
+         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+         data-ad-slot="XXXXXXXXXX"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
+  <div class="ad-container">
+    <ins class="adsbygoogle ad"
+         style="display:inline-block;width:320px;height:50px"
+         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+         data-ad-slot="XXXXXXXXXX"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
+  <div class="ad-container">
+    <ins class="adsbygoogle ad"
+         style="display:inline-block;width:320px;height:50px"
+         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+         data-ad-slot="XXXXXXXXXX"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
+  <div class="ad-container">
+    <ins class="adsbygoogle ad"
+         style="display:inline-block;width:320px;height:50px"
+         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+         data-ad-slot="XXXXXXXXXX"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
+  <div class="ad-container">
+    <ins class="adsbygoogle ad"
+         style="display:inline-block;width:320px;height:50px"
+         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+         data-ad-slot="XXXXXXXXXX"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
+  <div class="ad-container">
+    <ins class="adsbygoogle ad"
+         style="display:inline-block;width:320px;height:50px"
+         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+         data-ad-slot="XXXXXXXXXX"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
+  <div class="ad-container">
+    <ins class="adsbygoogle ad"
+         style="display:inline-block;width:320px;height:50px"
+         data-ad-client="ca-app-pub-2666625205982863/4378415081"
+         data-ad-slot="XXXXXXXXXX"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+  <!-- AdMob Ads End -->
+
 </body>
 </html>
