--- a/Ads.html
+++ b/Ads.html
@@ -115,7 +115,7 @@
     <ins class="adsbygoogle ad"
          style="display:inline-block;width:320px;height:50px"
          data-ad-client="ca-app-pub-2666625205982863/4378415081"
-         data-ad-slot="XXXXXXXXXX"></ins>
+         data-ad-slot="ca-app-pub-2666625205982863/4378415081"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
