--- a/Ads.html
+++ b/Ads.html
@@ -44,8 +44,7 @@
   <div class="ad-container">
     <ins class="adsbygoogle ad"
          style="display:inline-block;width:320px;height:50px"
-         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-         data-ad-slot="XXXXXXXXXX"></ins>
+         data-ad-slot="ca-app-pub-2666625205982863/4378415081"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
@@ -54,8 +53,7 @@
   <div class="ad-container">
     <ins class="adsbygoogle ad"
          style="display:inline-block;width:320px;height:50px"
-         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-         data-ad-slot="XXXXXXXXXX"></ins>
+         data-ad-slot="ca-app-pub-2666625205982863/4378415081"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
@@ -64,8 +62,7 @@
   <div class="ad-container">
     <ins class="adsbygoogle ad"
          style="display:inline-block;width:320px;height:50px"
-         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-         data-ad-slot="XXXXXXXXXX"></ins>
+         data-ad-slot="ca-app-pub-2666625205982863/4378415081"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
@@ -74,8 +71,7 @@
   <div class="ad-container">
     <ins class="adsbygoogle ad"
          style="display:inline-block;width:320px;height:50px"
-         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-         data-ad-slot="XXXXXXXXXX"></ins>
+         data-ad-slot="ca-app-pub-2666625205982863/4378415081"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
@@ -84,8 +80,7 @@
   <div class="ad-container">
     <ins class="adsbygoogle ad"
          style="display:inline-block;width:320px;height:50px"
-         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-         data-ad-slot="XXXXXXXXXX"></ins>
+         data-ad-slot="ca-app-pub-2666625205982863/4378415081"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
@@ -94,8 +89,7 @@
   <div class="ad-container">
     <ins class="adsbygoogle ad"
          style="display:inline-block;width:320px;height:50px"
-         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-         data-ad-slot="XXXXXXXXXX"></ins>
+         data-ad-slot="ca-app-pub-2666625205982863/4378415081"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
@@ -104,8 +98,7 @@
   <div class="ad-container">
     <ins class="adsbygoogle ad"
          style="display:inline-block;width:320px;height:50px"
-         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-         data-ad-slot="XXXXXXXXXX"></ins>
+         data-ad-slot="ca-app-pub-2666625205982863/4378415081"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
@@ -114,7 +107,6 @@
   <div class="ad-container">
     <ins class="adsbygoogle ad"
          style="display:inline-block;width:320px;height:50px"
-         data-ad-client="ca-app-pub-2666625205982863/4378415081"
          data-ad-slot="ca-app-pub-2666625205982863/4378415081"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
