--- a/Ads.html
+++ b/Ads.html
@@ -98,7 +98,7 @@
   <div class="ad-container">
     <ins class="adsbygoogle ad"
          style="display:inline-block;width:320px;height:50px"
-         data-ad-slot="ca-app-pub-2666625205982863/4378415081"></ins>
+         data-ad-slot="ca-app-pub-2666625205982863~1692541994"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
@@ -107,7 +107,7 @@
   <div class="ad-container">
     <ins class="adsbygoogle ad"
          style="display:inline-block;width:320px;height:50px"
-         data-ad-slot="ca-app-pub-2666625205982863/4378415081"></ins>
+         data-ad-slot="ca-app-pub-2666625205982863/2311225767"></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
